--- a/frontend/index.html
+++ b/frontend/index.html
@@ -167,7 +167,11 @@
                             Project As...</button>
                         <hr class="my-1 border-gray-200 dark:border-slate-700">
                         <button @click="activeView = 'settings'; closeMenu()"
-                            class="w-full text-left px-4 py-1.5 hover:bg-gray-100 dark:hover:bg-slate-700 dark:text-white">Settings</button>
+                            class="w-full text-left px-4 py-1.5 hover:bg-gray-100 dark:hover:bg-slate-700 dark:text-white">Project
+                            Settings</button>
+                        <button @click="activeView = 'connection'; closeMenu()"
+                            class="w-full text-left px-4 py-1.5 hover:bg-gray-100 dark:hover:bg-slate-700 dark:text-white">Connection
+                            Settings</button>
                         <hr class="my-1 border-gray-200 dark:border-slate-700">
                         <button @click="disconnect(); closeMenu()"
                             class="w-full text-left px-4 py-1.5 hover:bg-gray-100 dark:hover:bg-slate-700 text-rose-500">Disconnect</button>
@@ -281,6 +285,24 @@
                     <div x-show="activeView === 'commands'" class="absolute left-0 w-0.5 h-8 bg-indigo-500"></div>
                 </button>
 
+                <button @click="activeView = activeView === 'connection' ? null : 'connection'"
+                    class="w-10 h-10 flex items-center justify-center rounded-lg transition-colors relative"
+                    :class="activeView === 'connection' ? 'bg-white dark:bg-slate-700 text-indigo-600 dark:text-white shadow-sm' : 'text-gray-400 dark:text-slate-400 hover:text-gray-600 dark:hover:text-white hover:bg-white dark:hover:bg-slate-700'"
+                    title="Connection">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M17 21v-2a1 1 0 0 1-1-1v-1a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v1a1 1 0 0 1-1 1" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M19 15V6.5a1 1 0 0 0-7 0v11a1 1 0 0 1-7 0V9" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21v-2h-4" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M3 5h4V3a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v2z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M7 5a1 1 0 0 1 1 1v1a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a1 1 0 0 1 1-1h4z" />
+                    </svg>
+                    <div x-show="activeView === 'connection'" class="absolute left-0 w-0.5 h-8 bg-indigo-500"></div>
+                </button>
+
                 <button @click="activeView = activeView === 'repeat' ? null : 'repeat'"
                     class="w-10 h-10 flex items-center justify-center rounded-lg transition-colors relative"
                     :class="activeView === 'repeat' ? 'bg-white dark:bg-slate-700 text-indigo-600 dark:text-white shadow-sm' : 'text-gray-400 dark:text-slate-400 hover:text-gray-600 dark:hover:text-white hover:bg-white dark:hover:bg-slate-700'"
@@ -296,7 +318,7 @@
                 <button @click="activeView = activeView === 'settings' ? null : 'settings'"
                     class="w-10 h-10 flex items-center justify-center rounded-lg transition-colors relative"
                     :class="activeView === 'settings' ? 'bg-white dark:bg-slate-700 text-indigo-600 dark:text-white shadow-sm' : 'text-gray-400 dark:text-slate-400 hover:text-gray-600 dark:hover:text-white hover:bg-white dark:hover:bg-slate-700'"
-                    title="Settings">
+                    title="Project Settings">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z">
@@ -791,11 +813,11 @@
                     </div>
                 </div>
 
-                <!-- Settings View -->
+                <!-- Project Settings View -->
                 <div x-show="activeView === 'settings'" class="flex flex-col h-full">
                     <!-- Header -->
                     <div class="p-4 border-b border-gray-200 dark:border-slate-700">
-                        <h2 class="text-lg font-semibold text-gray-900 dark:text-slate-100">Settings</h2>
+                        <h2 class="text-lg font-semibold text-gray-900 dark:text-slate-100">Project Settings</h2>
                         <p class="text-xs text-gray-500 dark:text-slate-400 mt-0.5">Application configuration</p>
                     </div>
 
@@ -822,6 +844,18 @@
                             </button>
                         </div>
 
+                    </div>
+                </div>
+
+                <!-- Connection View -->
+                <div x-show="activeView === 'connection'" class="flex flex-col h-full">
+                    <!-- Header -->
+                    <div class="p-4 border-b border-gray-200 dark:border-slate-700">
+                        <h2 class="text-lg font-semibold text-gray-900 dark:text-slate-100">Connection</h2>
+                        <p class="text-xs text-gray-500 dark:text-slate-400 mt-0.5">Manage terminal connections</p>
+                    </div>
+
+                    <div class="flex-1 overflow-y-auto p-3 space-y-3">
                         <!-- Connection Mode -->
                         <div
                             class="bg-white dark:bg-slate-750 p-3 rounded-md border border-gray-200 dark:border-slate-700 shadow-sm transition-colors duration-200">
@@ -982,6 +1016,8 @@
                                 }[connectButtonState]"></span>
                             </button>
                         </div>
+                    </div>
+                </div>
             </aside>
 
             <!-- Tab Bar and Terminal Container -->
@@ -1079,7 +1115,9 @@
                         </path>
                     </svg>
                     <p class="text-xl font-medium">No Active Sessions</p>
-                    <p class="text-sm mt-2">Connect to a serial port in the settings to get started</p>
+                    <p class="text-sm mt-2">Connect in the <button @click="activeView = 'connection'"
+                            class="text-indigo-500 hover:text-indigo-600 font-medium">connection panel</button> to get
+                        started</p>
                 </div>
             </div>
         </div>
