--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,6 +97,11 @@
             cursor: grabbing !important;
         }
 
+        body.dragging-icon * {
+            transition: none !important;
+            cursor: grabbing !important;
+        }
+
         /* Button hover effects */
         button {
             transition: all 0.2s ease;
@@ -274,60 +279,19 @@
             <!-- VSCode-style Icon Tray -->
             <div
                 class="w-12 bg-gray-50 dark:bg-slate-800 flex flex-col items-center py-4 space-y-2 border-r border-gray-200 dark:border-slate-700 transition-colors duration-200">
-                <button @click="activeView = activeView === 'commands' ? null : 'commands'"
-                    class="w-10 h-10 flex items-center justify-center rounded-lg transition-colors relative"
-                    :class="activeView === 'commands' ? 'bg-white dark:bg-slate-700 text-indigo-600 dark:text-white shadow-sm' : 'text-gray-400 dark:text-slate-400 hover:text-gray-600 dark:hover:text-white hover:bg-white dark:hover:bg-slate-700'"
-                    title="Commands">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 6h16M4 12h16M4 18h16"></path>
-                    </svg>
-                    <div x-show="activeView === 'commands'" class="absolute left-0 w-0.5 h-8 bg-indigo-500"></div>
-                </button>
-
-                <button @click="activeView = activeView === 'connection' ? null : 'connection'"
-                    class="w-10 h-10 flex items-center justify-center rounded-lg transition-colors relative"
-                    :class="activeView === 'connection' ? 'bg-white dark:bg-slate-700 text-indigo-600 dark:text-white shadow-sm' : 'text-gray-400 dark:text-slate-400 hover:text-gray-600 dark:hover:text-white hover:bg-white dark:hover:bg-slate-700'"
-                    title="Connection">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M17 21v-2a1 1 0 0 1-1-1v-1a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v1a1 1 0 0 1-1 1" />
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M19 15V6.5a1 1 0 0 0-7 0v11a1 1 0 0 1-7 0V9" />
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21v-2h-4" />
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M3 5h4V3a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v2z" />
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M7 5a1 1 0 0 1 1 1v1a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a1 1 0 0 1 1-1h4z" />
-                    </svg>
-                    <div x-show="activeView === 'connection'" class="absolute left-0 w-0.5 h-8 bg-indigo-500"></div>
-                </button>
-
-                <button @click="activeView = activeView === 'repeat' ? null : 'repeat'"
-                    class="w-10 h-10 flex items-center justify-center rounded-lg transition-colors relative"
-                    :class="activeView === 'repeat' ? 'bg-white dark:bg-slate-700 text-indigo-600 dark:text-white shadow-sm' : 'text-gray-400 dark:text-slate-400 hover:text-gray-600 dark:hover:text-white hover:bg-white dark:hover:bg-slate-700'"
-                    title="Repeat Commands">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15">
-                        </path>
-                    </svg>
-                    <div x-show="activeView === 'repeat'" class="absolute left-0 w-0.5 h-8 bg-indigo-500"></div>
-                </button>
-
-                <button @click="activeView = activeView === 'settings' ? null : 'settings'"
-                    class="w-10 h-10 flex items-center justify-center rounded-lg transition-colors relative"
-                    :class="activeView === 'settings' ? 'bg-white dark:bg-slate-700 text-indigo-600 dark:text-white shadow-sm' : 'text-gray-400 dark:text-slate-400 hover:text-gray-600 dark:hover:text-white hover:bg-white dark:hover:bg-slate-700'"
-                    title="Project Settings">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z">
-                        </path>
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                    </svg>
-                    <div x-show="activeView === 'settings'" class="absolute left-0 w-0.5 h-8 bg-indigo-500"></div>
-                </button>
+                <template x-for="icon in sidebarIcons" :key="icon.id">
+                    <button @click="activeView = activeView === icon.id ? null : icon.id" draggable="true"
+                        @dragstart="handleIconDragStart($event, icon.id)"
+                        @dragover="handleIconDragOver($event, icon.id)" @drop="handleIconDrop($event, icon.id)"
+                        @dragend="handleDragEnd"
+                        class="w-10 h-10 flex items-center justify-center rounded-lg transition-colors relative" :class="[
+                            activeView === icon.id ? 'bg-white dark:bg-slate-700 text-indigo-600 dark:text-white shadow-sm' : 'text-gray-400 dark:text-slate-400 hover:text-gray-600 dark:hover:text-white hover:bg-white dark:hover:bg-slate-700',
+                            dragOverIconId === icon.id ? 'border-2 border-indigo-500' : ''
+                        ]" :title="icon.title">
+                        <div x-html="icon.icon" class="flex items-center justify-center"></div>
+                        <div x-show="activeView === icon.id" class="absolute left-0 w-0.5 h-8 bg-indigo-500"></div>
+                    </button>
+                </template>
             </div>
 
             <!-- Sidebar Panel -->
