--- a/frontend/index.html
+++ b/frontend/index.html
@@ -398,16 +398,16 @@
                         </div>
 
                         <!-- Commands List -->
-                        <div x-show="!loadingCommands && commands.length > 0 && !selectedCommand" class="space-y-1">
+                        <div x-show="!loadingCommands && commands.length > 0 && !selectedCommand"
+                            class="border border-gray-200 dark:border-slate-700 rounded-md overflow-hidden bg-white dark:bg-transparent divide-y divide-gray-200 dark:divide-slate-700">
                             <template x-for="cmd in commands" :key="cmd.id">
-                                <div
-                                    class="border border-gray-200 dark:border-slate-700 rounded-md overflow-hidden hover:bg-gray-100 dark:hover:bg-slate-750 transition-colors bg-white dark:bg-transparent">
+                                <div class="hover:bg-gray-100 dark:hover:bg-slate-750 transition-colors">
                                     <!-- Parent Command -->
                                     <div class="flex items-start">
                                         <!-- Expand/Collapse Button (only if has subcommands) -->
                                         <button x-show="cmd.hasSubcommands || cmd.subcommands"
                                             @click.stop="toggleCommandExpansion(cmd)"
-                                            class="p-2 hover:bg-gray-200 dark:hover:bg-slate-700 transition flex-shrink-0">
+                                            class="p-1.5 hover:bg-gray-200 dark:hover:bg-slate-700 transition flex-shrink-0">
                                             <svg class="w-3 h-3 text-gray-400 dark:text-slate-400 transition-transform"
                                                 :class="expandedCommands[cmd.id] ? 'rotate-90' : ''" fill="none"
                                                 stroke="currentColor" viewBox="0 0 24 24">
@@ -418,7 +418,7 @@
 
                                         <!-- Command Info -->
                                         <button @click="selectedCommand = cmd"
-                                            class="flex-1 text-left p-2 hover:bg-gray-200 dark:hover:bg-slate-700 transition">
+                                            class="flex-1 text-left p-2 hover:bg-gray-200 dark:hover:bg-slate-700 transition flex items-center">
                                             <div
                                                 class="font-medium text-gray-800 dark:text-slate-200 flex items-center text-xs">
                                                 <span class="font-mono" x-text="cmd.name"></span>
@@ -437,19 +437,18 @@
                                                 <!-- Badge when subcommands found -->
                                                 <span
                                                     x-show="!discoveringSubcommands[cmd.id] && (cmd.hasSubcommands || cmd.subcommands)"
-                                                    class="ml-1.5 text-[10px] text-indigo-600 dark:text-indigo-300 bg-indigo-50 dark:bg-indigo-900/50 px-1.5 py-0.5 rounded font-medium">
+                                                    class="ml-1.5 text-[9px] text-indigo-600 dark:text-indigo-300 bg-indigo-50 dark:bg-indigo-900/50 px-1 py-0 rounded font-medium">
                                                     sub
                                                 </span>
                                             </div>
-                                            <div class="text-xs text-gray-500 dark:text-slate-400 mt-0.5 line-clamp-1"
-                                                x-text="cmd.description"></div>
                                         </button>
 
                                         <!-- Quick Execute Button -->
                                         <button @click.stop="quickExecuteCommand(cmd)"
-                                            class="p-2 hover:bg-emerald-600/20 text-emerald-400 hover:text-emerald-300 transition flex-shrink-0"
+                                            class="p-1.5 hover:bg-emerald-600/20 text-emerald-400 hover:text-emerald-300 transition flex-shrink-0"
                                             title="Execute command">
-                                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor"
+                                                viewBox="0 0 24 24">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                     d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z">
                                                 </path>
@@ -460,9 +459,10 @@
 
                                         <!-- Add to Repeat Button -->
                                         <button @click.stop="openRepeatModal(cmd)"
-                                            class="p-2 hover:bg-indigo-600/20 text-indigo-400 hover:text-indigo-300 transition flex-shrink-0"
+                                            class="p-1.5 hover:bg-indigo-600/20 text-indigo-400 hover:text-indigo-300 transition flex-shrink-0"
                                             title="Set as repeat command">
-                                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor"
+                                                viewBox="0 0 24 24">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                     d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15">
                                                 </path>
@@ -477,16 +477,14 @@
                                             <div
                                                 class="flex items-center border-b border-gray-200 dark:border-slate-700 last:border-b-0">
                                                 <button @click="selectedCommand = subcmd"
-                                                    class="flex-1 text-left p-2 hover:bg-gray-200 dark:hover:bg-slate-700 transition">
+                                                    class="flex-1 text-left p-1.5 hover:bg-gray-200 dark:hover:bg-slate-700 transition flex items-center">
                                                     <div class="font-medium text-gray-700 dark:text-slate-300 text-xs font-mono"
                                                         x-text="subcmd.name"></div>
-                                                    <div class="text-[10px] text-gray-500 dark:text-slate-500 mt-0.5 line-clamp-1"
-                                                        x-text="subcmd.description"></div>
                                                 </button>
 
                                                 <!-- Quick Execute Button -->
                                                 <button @click.stop="quickExecuteCommand(subcmd)"
-                                                    class="p-2 hover:bg-emerald-600/20 text-emerald-400 hover:text-emerald-300 transition flex-shrink-0"
+                                                    class="p-1.5 hover:bg-emerald-600/20 text-emerald-400 hover:text-emerald-300 transition flex-shrink-0"
                                                     title="Execute command">
                                                     <svg class="w-3 h-3" fill="none" stroke="currentColor"
                                                         viewBox="0 0 24 24">
@@ -498,18 +496,19 @@
                                                             stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
                                                         </path>
                                                     </svg>
-                                                    <!-- Add to Repeat Button -->
-                                                    <button @click.stop="openRepeatModal(subcmd)"
-                                                        class="p-2 hover:bg-indigo-600/20 text-indigo-400 hover:text-indigo-300 transition flex-shrink-0"
-                                                        title="Set as repeat command">
-                                                        <svg class="w-3 h-3" fill="none" stroke="currentColor"
-                                                            viewBox="0 0 24 24">
-                                                            <path stroke-linecap="round" stroke-linejoin="round"
-                                                                stroke-width="2"
-                                                                d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15">
-                                                            </path>
-                                                        </svg>
-                                                    </button>
+                                                </button>
+                                                <!-- Add to Repeat Button -->
+                                                <button @click.stop="openRepeatModal(subcmd)"
+                                                    class="p-1.5 hover:bg-indigo-600/20 text-indigo-400 hover:text-indigo-300 transition flex-shrink-0"
+                                                    title="Set as repeat command">
+                                                    <svg class="w-3 h-3" fill="none" stroke="currentColor"
+                                                        viewBox="0 0 24 24">
+                                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                                            stroke-width="2"
+                                                            d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15">
+                                                        </path>
+                                                    </svg>
+                                                </button>
                                             </div>
                                         </template>
                                     </div>
@@ -576,11 +575,9 @@
                                     <template x-for="sub in getDirectSubcommands(selectedCommand)" :key="sub.id">
                                         <button
                                             @click="selectedCommand = sub; $nextTick(() => { $el.closest('.overflow-y-auto').scrollTop = 0; })"
-                                            class="w-full text-left p-2 bg-gray-50 dark:bg-slate-900 border border-gray-200 dark:border-slate-800 hover:bg-gray-100 dark:hover:bg-slate-850 rounded transition-colors">
+                                            class="w-full text-left p-1.5 bg-gray-50 dark:bg-slate-900 border border-gray-200 dark:border-slate-800 hover:bg-gray-100 dark:hover:bg-slate-850 rounded transition-colors flex items-center">
                                             <div class="font-medium text-xs text-indigo-600 dark:text-indigo-400 font-mono"
                                                 x-text="sub.name"></div>
-                                            <div class="text-[10px] text-gray-500 dark:text-slate-500 line-clamp-1 mt-0.5"
-                                                x-text="sub.description"></div>
                                         </button>
                                     </template>
                                 </div>
@@ -663,24 +660,21 @@
 
                         <!-- Repeat List -->
                         <template x-for="rc in repeatCommands" :key="rc.id">
-                            <div class="bg-white dark:bg-slate-750 border rounded-md p-3 transition-all duration-200 shadow-sm"
+                            <div class="bg-white dark:bg-slate-750 border rounded-md p-2 transition-all duration-200 shadow-sm"
                                 :class="rc.runningSessions.some(s => s.sessionId === activeSessionId) ? 'border-indigo-500 shadow-indigo-500/20' : 'border-gray-200 dark:border-slate-700'">
                                 <div class="flex items-center justify-between mb-2">
                                     <div class="flex-1 min-w-0">
-                                        <div class="flex items-center flex-wrap gap-1 mb-1">
-                                            <div class="text-xs font-semibold text-gray-800 dark:text-slate-200 truncate mr-1"
-                                                x-text="rc.name"></div>
+                                        <div class="flex items-center flex-wrap gap-1">
+                                            <div class="text-xs font-mono font-semibold text-indigo-600 dark:text-indigo-400 truncate mr-1"
+                                                x-text="rc.command"></div>
                                             <!-- Port Badges -->
                                             <template x-for="run in rc.runningSessions" :key="run.sessionId">
                                                 <span
-                                                    class="px-1.5 py-0.5 border text-[9px] rounded flex items-center transition-colors"
+                                                    class="px-1 py-0.5 border text-[8px] rounded flex items-center transition-colors"
                                                     :class="run.sessionId === activeSessionId ? 'bg-indigo-50 dark:bg-indigo-900/50 border-indigo-200 dark:border-indigo-500 text-indigo-700 dark:text-indigo-200' : 'bg-gray-100 dark:bg-slate-800 border-gray-200 dark:border-slate-600 text-gray-500 dark:text-slate-400'">
                                                     <span x-text="run.port"></span>
                                                 </span>
                                             </template>
-                                        </div>
-                                        <div class="text-[10px] text-gray-500 dark:text-slate-500 font-mono truncate"
-                                            x-text="rc.command">
                                         </div>
                                     </div>
                                     <button @click="toggleRepeatCommand(rc)"
