--- a/frontend/index.html
+++ b/frontend/index.html
@@ -474,7 +474,7 @@
 
                                             <!-- Edit Button -->
                                             <button @click.stop="openCustomCommandModal(cmd)"
-                                                class="p-1.5 opacity-0 group-hover:opacity-100 hover:text-indigo-500 transition flex-shrink-0"
+                                                class="p-1.5 opacity-0 group-hover:opacity-100 text-slate-400 dark:text-slate-300 hover:text-indigo-600 dark:hover:text-white transition flex-shrink-0"
                                                 title="Edit command metadata/args">
                                                 <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor"
                                                     viewBox="0 0 24 24">
@@ -487,7 +487,7 @@
 
                                             <!-- Delete Button -->
                                             <button @click.stop="deleteCustomCommand(cmd.id)"
-                                                class="p-1.5 opacity-0 group-hover:opacity-100 hover:text-rose-500 transition flex-shrink-0"
+                                                class="p-1.5 opacity-0 group-hover:opacity-100 text-slate-400 dark:text-slate-300 hover:text-rose-600 dark:hover:text-white transition flex-shrink-0"
                                                 title="Delete command">
                                                 <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor"
                                                     viewBox="0 0 24 24">
