--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zephyr Device Manager</title>
-    <link rel="icon"
-        href="data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='32' height='32' rx='6' fill='url(%23paint0_linear)'/%3E%3Cpath d='M11 13L15 17L11 21M18 21H22M7 26H25C26.1046 26 27 25.1046 27 24V10C27 8.89543 26.1046 8 25 8H7C5.89543 8 5 8.89543 5 10V24C5 25.1046 5.89543 26 7 26Z' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear' x1='0' y1='0' x2='32' y2='32' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%236366f1'/%3E%3Cstop offset='1' stop-color='%239333ea'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E"
-        type="image/svg+xml">
+    <link rel="icon" href="/logo.png?v=2" type="image/png">
+    <link rel="apple-touch-icon" href="/logo.png?v=2">
     <link rel="stylesheet" href="css/xterm.css" />
     <script src="js/lib/xterm.js"></script>
     <script src="js/lib/xterm-addon-fit.js"></script>
@@ -143,12 +142,8 @@
             <!-- App Icon -->
             <div class="mr-4 flex items-center justify-center">
                 <div
-                    class="w-6 h-6 bg-gradient-to-br from-indigo-500 to-purple-600 rounded flex items-center justify-center shadow-sm">
-                    <svg class="w-3.5 h-3.5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z">
-                        </path>
-                    </svg>
+                    class="w-6 h-6 bg-white dark:bg-slate-800 rounded flex items-center justify-center shadow-sm overflow-hidden border border-gray-200 dark:border-slate-700">
+                    <img src="logo.png" alt="ZDM Logo" class="w-full h-full object-contain">
                 </div>
             </div>
 
@@ -1451,12 +1446,8 @@
 
                             <div class="relative z-10">
                                 <div
-                                    class="w-20 h-20 bg-white/20 backdrop-blur-sm rounded-2xl flex items-center justify-center shadow-xl mx-auto mb-4 border border-white/30">
-                                    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor"
-                                        viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-                                    </svg>
+                                    class="w-20 h-20 bg-white/20 backdrop-blur-sm rounded-2xl flex items-center justify-center shadow-xl mx-auto mb-4 border border-white/30 overflow-hidden">
+                                    <img src="logo.png" alt="ZDM Logo" class="w-full h-full object-cover">
                                 </div>
                                 <h3 class="text-3xl font-black text-white tracking-tight">Welcome to ZDM</h3>
                                 <p class="text-indigo-100 mt-2 font-medium">Zephyr Device Manager</p>
@@ -1560,12 +1551,8 @@
 
                         <div class="px-6 py-10 text-center">
                             <div
-                                class="w-20 h-20 bg-gradient-to-br from-indigo-500 to-purple-600 rounded-2xl flex items-center justify-center shadow-xl mx-auto mb-6 transform -rotate-6 hover:rotate-0 transition-transform duration-300">
-                                <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z">
-                                    </path>
-                                </svg>
+                                class="w-20 h-20 bg-white dark:bg-slate-700 rounded-2xl flex items-center justify-center shadow-xl mx-auto mb-6 transform -rotate-6 hover:rotate-0 transition-transform duration-300 overflow-hidden border border-gray-100 dark:border-slate-600">
+                                <img src="logo.png" alt="ZDM Logo" class="w-full h-full object-cover">
                             </div>
                             <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-2">Zephyr Device Manager</h3>
                             <p class="text-sm text-indigo-500 font-semibold mb-6" x-text="appVersion.full_version"></p>
