--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1285,6 +1285,37 @@
                                         (Log file name can contain &Y, &M, &D for date, &T for time, &H for host name,
                                         and &P for port number)
                                     </p>
+                                    <div class="mt-3">
+                                        <label
+                                            class="block text-[10px] font-semibold text-gray-700 dark:text-slate-400 mb-2 uppercase">
+                                            Log mode
+                                        </label>
+                                        <div class="flex space-x-4">
+                                            <label class="inline-flex items-center cursor-pointer">
+                                                <input type="radio" x-model="logMode" value="printable"
+                                                    class="w-3 h-3 text-indigo-600 bg-gray-100 border-gray-300 focus:ring-indigo-500 dark:bg-slate-900 dark:border-slate-700">
+                                                <span
+                                                    class="ml-2 text-xs text-gray-700 dark:text-slate-300">Printable</span>
+                                            </label>
+                                            <label class="inline-flex items-center cursor-pointer">
+                                                <input type="radio" x-model="logMode" value="raw"
+                                                    class="w-3 h-3 text-indigo-600 bg-gray-100 border-gray-300 focus:ring-indigo-500 dark:bg-slate-900 dark:border-slate-700">
+                                                <span class="ml-2 text-xs text-gray-700 dark:text-slate-300">Raw
+                                                    bytes</span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="mt-4 pt-3 border-t border-gray-100 dark:border-slate-800">
+                                        <label class="inline-flex items-center cursor-pointer">
+                                            <input type="checkbox" x-model="omitSent"
+                                                class="w-3.5 h-3.5 text-indigo-600 bg-gray-100 border-gray-300 rounded focus:ring-indigo-500 dark:bg-slate-900 dark:border-slate-700">
+                                            <span class="ml-2 text-xs font-medium text-gray-700 dark:text-slate-300">Do
+                                                not log sent commands (TX)</span>
+                                        </label>
+                                        <p class="text-[10px] text-gray-500 dark:text-slate-400 mt-1 ml-6">
+                                            (Recommended for echo-enabled shells to prevent double logging)
+                                        </p>
+                                    </div>
                                 </div>
 
                                 <div x-show="statusMessage" class="p-2 rounded-md border text-xs" :class="{
