refactor: Rename Zephyr Device Manager (ZDM) to ZField, updating all related references, documentation, and configuration files for consistency.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zephyr Device Manager</title>
+    <title>ZField</title>
     <link rel="icon" href="/logo.png?v=2" type="image/png">
     <link rel="apple-touch-icon" href="/logo.png?v=2">
     <link rel="stylesheet" href="css/xterm.css" />
@@ -143,7 +143,7 @@
             <div class="mr-4 flex items-center justify-center">
                 <div
                     class="w-6 h-6 bg-white dark:bg-slate-800 rounded flex items-center justify-center shadow-sm overflow-hidden border border-gray-200 dark:border-slate-700">
-                    <img src="logo.png" alt="ZDM Logo" class="w-full h-full object-contain">
+                    <img src="logo.png" alt="ZField Logo" class="w-full h-full object-contain">
                 </div>
             </div>
 
@@ -1837,10 +1837,10 @@
                             <div class="relative z-10">
                                 <div
                                     class="w-20 h-20 bg-white/20 backdrop-blur-sm rounded-2xl flex items-center justify-center shadow-xl mx-auto mb-4 border border-white/30 overflow-hidden">
-                                    <img src="logo.png" alt="ZDM Logo" class="w-full h-full object-cover">
+                                    <img src="logo.png" alt="ZField Logo" class="w-full h-full object-cover">
                                 </div>
-                                <h3 class="text-3xl font-black text-white tracking-tight">Welcome to ZDM</h3>
-                                <p class="text-indigo-100 mt-2 font-medium">Zephyr Device Manager</p>
+                                <h3 class="text-3xl font-black text-white tracking-tight">Welcome to ZField</h3>
+                                <p class="text-indigo-100 mt-2 font-medium">ZField</p>
                             </div>
                         </div>
 
@@ -1942,9 +1942,9 @@
                         <div class="px-6 py-10 text-center">
                             <div
                                 class="w-20 h-20 bg-white dark:bg-slate-700 rounded-2xl flex items-center justify-center shadow-xl mx-auto mb-6 transform -rotate-6 hover:rotate-0 transition-transform duration-300 overflow-hidden border border-gray-100 dark:border-slate-600">
-                                <img src="logo.png" alt="ZDM Logo" class="w-full h-full object-cover">
+                                <img src="logo.png" alt="ZField Logo" class="w-full h-full object-cover">
                             </div>
-                            <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-2">Zephyr Device Manager</h3>
+                            <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-2">ZField</h3>
                             <p class="text-sm text-indigo-500 font-semibold mb-6" x-text="appVersion.full_version"></p>
 
                             <div class="space-y-4 text-sm text-gray-600 dark:text-slate-400">
